force-app/main/default/objects/QuickBookEventLog__c/QuickBookEventLog__c.object-meta.xml
<CustomObject>
    <label>QuickBookEventLog</label>
    <nameField>
        <displayFormat>QE-{00000000}</displayFormat>
        <label>QuickBookEventLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuickBookEventLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>