force-app/main/default/objects/QuickBookEventLog__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>QuickBookEventLogs</relationshipLabel>
    <relationshipName>QuickBookEventLogs</relationshipName>
    <type>Lookup</type>
</CustomField>