force-app/main/default/objects/QuickBookEventLog__c/fields/ResponseBody__c.field-meta.xml
<CustomField>
    <fullName>ResponseBody__c</fullName>
    <label>ResponseBody</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>